<resources>
    <string name="app_name">Enterprise VPN Client</string>
    <string name="main_activity_name">Enterprise VPN Client</string>
    <string name="show_log">View log</string>
    <string name="search">Search</string>
    <string name="vpn_not_supported_title">VPN not supported</string>
    <string name="vpn_not_supported">Your device does not support VPN applications.\nPlease contact the manufacturer.</string>
    <string name="vpn_not_supported_during_lockdown">VPN connections are not supported in lockdown mode.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="profile_not_found">Profile not found</string>
    <string name="strongswan_shortcut">strongSwan shortcut</string>
    <string name="log_title">Log</string>
    <string name="send_log">Send log file</string>
    <string name="empty_log">Log file is empty</string>
    <string name="log_mail_subject">strongSwan %1$s Log File</string>
    <string name="no_profiles">No VPN profiles.</string>
    <string name="add_profile">Add VPN profile</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Delete</string>
    <string name="select_profiles">Select profiles</string>
    <string name="profiles_deleted">Selected profiles deleted</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="one_profile_selected">One profile selected</string>
    <string name="x_profiles_selected">%1$d profiles selected</string>
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_import">Import</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="profile_name_label">Profile name (optional)</string>
    <string name="profile_name_label_simple">Profile name</string>
    <string name="profile_name_hint">Defaults to the configured server</string>
    <string name="profile_name_hint_gateway">Defaults to \"%1$s\"</string>
    <string name="profile_server">Server</string>
    <string name="profile_gateway_label"><![CDATA[<b>Server:</b>]]> %1$s</string>
    <string name="profile_gateway_hint">IP address or hostname of the VPN server</string>
    <string name="profile_vpn_type_label">VPN Type</string>
    <string name="profile_username_label">Username</string>
    <string name="profile_username"><![CDATA[<b>Username</b>]]> %1$s</string>
    <string name="profile_password_label">Password (optional)</string>
    <string name="profile_password_hint">Leave blank to get prompted on demand</string>
    <string name="profile_user_certificate_label">User certificate</string>
    <string name="profile_user_certificate"><![CDATA[<b>User certificate:</b>]]> %1$s</string>
    <string name="profile_user_select_certificate_label">Select user certificate</string>
    <string name="profile_user_select_certificate">Select a specific user certificate</string>
    <string name="profile_user_select_id_label">User identity</string>
    <string name="profile_user_select_id"><![CDATA[<b>User identity:</b>]]> %1$s</string>
    <string name="profile_user_select_id_init">Select a certificate first</string>
    <string name="profile_user_select_id_default">Default (%1$s)</string>
    <string name="profile_ca_label">CA certificate</string>
    <string name="profile_ca_auto_label">Select automatically</string>
    <string name="profile_ca_select_certificate_label">Select CA certificate</string>
    <string name="profile_ca_select_certificate">Select a specific CA certificate</string>
    <string name="profile_advanced_label">Advanced settings</string>
    <string name="profile_show_advanced_label">Show advanced settings</string>
    <string name="profile_remote_id_label">Server identity</string>
    <string name="profile_remote_id_hint">Defaults to the configured server. Custom values are explicitly sent to the server and enforced during authentication</string>
    <string name="profile_remote_id_hint_gateway">Defaults to \"%1$s\". Custom values are explicitly sent to the server and enforced during authentication</string>
    <string name="profile_mtu_label">MTU of the VPN tunnel device</string>
    <string name="profile_mtu_hint">In case the default value is unsuitable for a particular network</string>
    <string name="profile_port_label">Server port</string>
    <string name="profile_port_hint">UDP port to connect to, if different from the default</string>
    <string name="profile_nat_keepalive_label">NAT-T keepalive interval</string>
    <string name="profile_nat_keepalive_hint">Small packets are sent to keep mappings on NAT routers alive if there is no other traffic. In order to save energy the default interval is 45 seconds. Behind NAT routers that remove mappings early this might be too high, try 20 seconds or less in that case.</string>
    <string name="profile_cert_req_label">Send certificate requests</string>
    <string name="profile_cert_req_hint">Certificate requests are sent for all available or selected CA certificates. To reduce the size of the IKE_AUTH message this can be disabled. However, this only works if the server sends its certificate even if it didn\'t receive any certificate requests.</string>
    <string name="profile_split_tunneling_label">Split tunneling</string>
    <string name="profile_split_tunneling_intro">By default, the client will route all network traffic through the VPN, unless the server narrows the subnets when the connection is established, in which case only traffic the server allows will be routed via VPN (by default, all other traffic is routed as if there was no VPN).</string>
    <string name="profile_split_tunnelingv4_title">Block IPv4 traffic not destined for the VPN</string>
    <string name="profile_split_tunnelingv6_title">Block IPv6 traffic not destined for the VPN</string>
    <string name="profile_included_subnets_label">Custom subnets</string>
    <string name="profile_included_subnets_hint">Only route traffic to specific subnets via VPN, everything else is routed as if there was no VPN (separated by spaces, e.g. \"192.168.1.0/24 2001:db8::/64\")</string>
    <string name="profile_excluded_subnets_label">Excluded subnets</string>
    <string name="profile_excluded_subnets_hint">Traffic to these subnets will not be routed via VPN, but as if there was no VPN (separated by spaces, e.g. \"192.168.1.0/24 2001:db8::/64\")</string>
    <string name="profile_select_apps_label">Applications</string>
    <string name="profile_select_apps">Select applications</string>
    <string name="profile_select_no_apps">No applications selected</string>
    <string name="profile_select_one_app">One application selected</string>
    <string name="profile_select_x_apps">%1$d applications selected</string>
    <string name="profile_import">Import VPN profile</string>
    <string name="profile_import_failed">Failed to import VPN profile</string>
    <string name="profile_import_failed_detail">Failed to import VPN profile: %1$s</string>
    <string name="profile_import_failed_not_found">File not found</string>
    <string name="profile_import_failed_host">Host unknown</string>
    <string name="profile_import_failed_tls">TLS handshake failed</string>
    <string name="profile_import_failed_value">Invalid value in \"%1$s\"</string>
    <string name="profile_import_exists">This VPN profile already exists, its current settings will be replaced.</string>
    <string name="profile_cert_import">Import certificate from VPN profile</string>
    <string name="profile_cert_alias">Certificate for \"%1$s\"</string>
    <string name="alert_text_no_input_gateway">A value is required to initiate the connection</string>
    <string name="alert_text_no_input_username">Please enter your username </string>
    <string name="alert_text_nocertfound_title">No CA certificate selected</string>
    <string name="user_cert_alias">User certificate alias</string>
    <string name="ca_cert_data">CA Certificate</string>
    <string name="ca_cert_data_description">Binary data of CA Certificate, which will be imported to application. When empty: certificate will be automatically chose.</string>
    <string name="use_advanced_settings">Use advanced settings</string>
    <string name="advanced_server_identity">Server identity</string>
    <string name="advanced_mtu_description">In case the default value is unsuitable for a particular network. Value has to be in range from 1280 – 1500. This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_server_port_title">Server port</string>
    <string name="advanced_server_port_description">UDP port to connect to. 500 is default. This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_nat_keep_alive_description">Small packets are sent to keep mappings on NAT routers alive if there is no other traffic. In order to save energy the default interval is 45 seconds. Behind NAT routers that remove mappings early this might be too high, try 20 seconds or less in that case. This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_send_cert_request_description">Certificate requests are sent for all available or selected CA certificates. To reduce the size of the IKE_AUTH message this can be disabled. However, this only works if the server sends its certificate even if it didn\'t receive any certificate requests. This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_subnets_whitelist_title">Subnets whitelist</string>
    <string name="advanced_subnets_whitelist_description">Only route traffic to specific subnets via VPN, everything else is routed as if there was no VPN (separated by spaces, e.g. 192.168.1.0/24 2001:db8::/64). This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_subnets_blackist_title">Subnets blacklist</string>
    <string name="advanced_subnets_blackist_description">Traffic to these subnets will not be routed via VPN, but as if there was no VPN (separated by spaces, e.g. 192.168.1.0/24 2001:db8::/64). This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_applications_behavior_description">When chose other option than "All applications use the VPN" package name list shouldn\'t be empty. This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="advanced_applications_behavior_title">Other applications behavior when VPN is connected.</string>
    <string name="advanced_applications_list_title">Applications list</string>
    <string name="advanced_applications_list_description">List of applications for which specified behavior will be applied. This setting is only considered if \'Use advanced settings\' is checked</string>
    <string name="allow_other_vpn_settings_description">Setting this to false will block adding other VPN Profiles. Any existing profiles will be deleted</string>
    <string name="allow_other_vpn_settings_title">Allow add other VPN profiles</string>
    <string name="close_app_after_vpn_connect_title">Hide application after establish VPN</string>
    <string name="allow_disconnect_title">Allow user to disconnect VPN</string>
    <string name="allow_clear_app_data_title">Allow user clear application data</string>
    <string name="allow_clear_app_data_description">Allow user clear application data. Clearing this data will delete all saved VPN profiles and disconnect already connected VPN.</string>
    <string name="p12_user_cert_data_title">PKCS12 User Certificate</string>
    <string name="p12_user_cert_data_description">Base64 encoded user certificate data</string>
    <string name="p12_user_cert_password_title">Password to open PKCS12</string>
    <string name="p12_user_cert_password_description">Password to open PKCS12</string>
</resources>