<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:key="allow_modify_vpn_profile"
        android:defaultValue="true"
        android:restrictionType="bool"
        android:description="@string/allow_other_vpn_settings_description"
        android:title="@string/allow_other_vpn_settings_title"/>

    <restriction
        android:key="close_app_after_vpn_connect"
        android:defaultValue="false"
        android:restrictionType="bool"
        android:title="@string/close_app_after_vpn_connect_title"/>

    <restriction
        android:key="allow_disconnect"
        android:defaultValue="false"
        android:restrictionType="bool"
        android:title="@string/allow_disconnect_title"/>

    <restriction
        android:key="allow_clear_app_data"
        android:defaultValue="true"
        android:restrictionType="bool"
        android:title="@string/allow_clear_app_data_title"
        android:description="@string/allow_clear_app_data_description"/>

    <restriction
        android:key="host"
        android:defaultValue=""
        android:description="@string/profile_gateway_hint"
        android:restrictionType="string"
        android:title="@string/profile_gateway_label"/>

    <restriction
        android:key="vpn_type"
        android:defaultValue="0"
        android:restrictionType="choice"
        android:title="@string/profile_vpn_type_label"
        android:entries="@array/vpn_types"
        android:entryValues="@array/vpn_types_values"/>

    <!--<restriction-->
        androidroid:key="user_cert_alias"-->
        androidroid:defaultValue=""-->
        androidroid:restrictionType="string"-->
        androidroid:title="@string/user_cert_alias"-->
        androidroid:description="@string/user_cert_alias"/>-->

    <restriction
        android:key="user_cert_data"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/p12_user_cert_data_title"
        android:description="@string/p12_user_cert_data_description"/>

    <restriction
        android:key="user_cert_pass"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/p12_user_cert_password_title"
        android:description="@string/p12_user_cert_password_description"/>

    <restriction
        android:key="ca_cert_data"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/ca_cert_data"
        android:description="@string/ca_cert_data_description"/>

    <restriction
        android:key="profile_name"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/profile_name_label_simple"
        android:description="@string/profile_name_label"/>

    <restriction
        android:key="use_advanced_settings"
        android:defaultValue="false"
        android:restrictionType="bool"
        android:title="@string/use_advanced_settings"/>

    <restriction
        android:key="advanced_server_identity"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/advanced_server_identity"
        android:description="@string/profile_remote_id_hint"/>

    <restriction
        android:key="advanced_mtu"
        android:defaultValue="1400"
        android:restrictionType="integer"
        android:title="@string/profile_mtu_label"
        android:description="@string/advanced_mtu_description"/>

    <restriction
        android:key="advanced_port"
        android:defaultValue="500"
        android:restrictionType="integer"
        android:title="@string/advanced_server_port_title"
        android:description="@string/advanced_server_port_description"/>

    <restriction
        android:key="advanced_nat_keep_alive"
        android:defaultValue="45"
        android:restrictionType="integer"
        android:title="@string/profile_nat_keepalive_label"
        android:description="@string/advanced_nat_keep_alive_description"/>

    <restriction
        android:key="advanced_send_certificate_request"
        android:defaultValue="true"
        android:restrictionType="bool"
        android:title="@string/profile_cert_req_label"
        android:description="@string/advanced_send_cert_request_description"/>

    <restriction
        android:key="advanced_subnets_whitelist"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/advanced_subnets_whitelist_title"
        android:description="@string/advanced_subnets_whitelist_description"/>

    <restriction
        android:key="advanced_subnets_blacklist"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/advanced_subnets_blackist_title"
        android:description="@string/advanced_subnets_blackist_description"/>

    <restriction
        android:key="advanced_block_ipv4"
        android:defaultValue="false"
        android:restrictionType="bool"
        android:title="@string/profile_split_tunnelingv4_title"/>

    <restriction
        android:key="advanced_block_ipv6"
        android:defaultValue="false"
        android:restrictionType="bool"
        android:title="@string/profile_split_tunnelingv6_title"/>

    <restriction
        android:key="advanced_applications_behavior"
        android:defaultValue="0"
        android:restrictionType="choice"
        android:title="@string/advanced_applications_behavior_title"
        android:entries="@array/apps_handling"
        android:entryValues="@array/apps_handling_values"
        android:description="@string/advanced_applications_behavior_description"/>

    <restriction
        android:key="advanced_applications_list"
        android:defaultValue=""
        android:restrictionType="string"
        android:title="@string/advanced_applications_list_title"
        android:description="@string/advanced_applications_list_description"/>

</restrictions>